# avaliacao-pratica-stj

./: README.md  combined_output.csv  pyproject.toml  script.py
dados_csv/: pagina10.csv  pagina12.csv  pagina14.csv  pagina15.csv  pagina16.csv  pagina18.csv  pagina20.csv  pagina23.csv  pagina27.csv  pagina3.csv  pagina4.csv  pagina6.csv
dados_csv copy/: pagina1.csv  pagina11.csv  pagina13.csv  pagina17.csv  pagina19.csv  pagina2.csv  pagina21.csv  pagina22.csv  pagina24.csv  pagina25.csv  pagina26.csv  pagina28.csv  pagina5.csv  pagina7.csv  pagina8.csv  pagina9.csv
